--- a/iikoTest/appsettings.json
+++ b/iikoTest/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+      "DefaultConnection": "Host=localhost;Port=5433;Database=iikoTestClients;User Id=postgres;Password=admin;"
+    }
 }
